<resources>
    <string name="app_name">ToTabs</string>

    <!-- Strings related to splash screen -->
    <string name="splash_screen_description">Splash screen with ToTabs logo</string>

    <!-- Strings related to dialog -->
    <string name="dialog_info_title_text">Information</string>
    <string name="not_write_external_permission_text">You did not allow for write external storage. Application can not see files.</string>
    <string name="problem_with_record_file_text">Problem with record file. Application can not read it.</string>
    <string name="understand_accept_button">I understand</string>
    <string name="why_need_write_external_storage_text">Browse files required write external storage.</string>
    <string name="phone_has_none_music_player_text">The phone has no music player. Application can not play the file.</string>

    <!-- Strings related to main activity -->
    <string name="analyze_text">Analyze</string>
    <string name="library_text">Library</string>
    <string name="end_text">End</string>
    <string name="main_logo_description">Application ToTabs logo</string>

    <!-- Strings related to chooser source activity -->
    <string name="question_text">What do you want analyze?</string>
    <string name="file_chooser_description">Choose music file</string>
    <string name="microphone_description">Record sound</string>

    <!-- Strings related to music preview activity -->
    <string name="basic_text_default">This is default basic text</string>
    <string name="extend_text_default">This is default extend text</string>
    <string name="start_analyze_text">Start Analyze</string>
    <string name="preview_image_description">Preview image</string>
    <string name="basic_tag_text">Basic information:</string>
    <string name="name_text">Name:</string>
    <string name="title_text">Title:</string>
    <string name="artist_text">Artist:</string>
    <string name="author_text">Author:</string>
    <string name="album_text">Album:</string>
    <string name="genre_text">Genre:</string>
    <string name="duration_text">Duration:</string>
    <string name="advance_tag_text">Advance information:</string>
    <string name="mime_type_text">Mime type:</string>
    <string name="bit_rate_text">Bit-rate:</string>
    <string name="modify_date_text">Modify date:</string>
    <string name="sample_rate_text">Sample rate:</string>
    <string name="channel_count_text">Channel count:</string>
    <string name="number_of_tracks_text">Number of tracks:</string>
    <string name="empty_text">empty</string>
    <string name="beats_per_minute_text">BPM:</string>
    <string name="default_beats_per_minute_text">60</string>
    <string name="bits_per_second_unit_text">bits per seconds</string>

    <!-- Strings related to track activity -->
    <string name="play_text">Play</string>
    <string name="save_text">Save</string>
    <string name="details_text">Details</string>
    <string name="staff_image_description">Staff image</string>
    <string name="tablature_image_description">Tablature image</string>
    <string name="beats_per_minute_shortcut">BPM</string>
    <string name="tuning_text">Tuning:</string>
    <string-array name="tunings">
        <item>e1 b g d A E</item>
        <item>e1 b g d A D</item>
        <item>dis1 b fis cis Gis Dis</item>
    </string-array>

    <!-- Strings related to fragment item -->
    <string name="default_track_name_text">Default track name</string>
    <string name="prefix_duration_text">Duration:</string>
    <string name="prefix_beats_per_minute_text">BPM:</string>
    <string name="prefix_added_date_text">Added date:</string>


</resources>
